--- a/index.html
+++ b/index.html
@@ -388,6 +388,66 @@
                     </a>
                 </div>
 
+                <!--Card 7-->
+                <div class="col-12 col-sm-4 my-3">
+
+                    <a href="https://viajeschilepage.netlify.app" target="_blank">
+
+                        <!--Estructura card-->
+                        <div class="card border-0">
+
+                            <!--Imagen card-->
+                            <img src="assets/img/viajesChile.png" class="card-img-top" alt="Img_viajesChile">
+
+                            <!--Body card-->
+                            <div class="card-body">
+
+                                <!--Título card-->
+                                <h4 class="card-title">
+                                    Viajes Chile
+                                </h4>
+
+                                <!--Descripción card-->
+                                <p class="card-text fw-light">
+                                    Desafío latam n°7
+                                </p>
+
+                            </div>
+                        </div>
+
+                    </a>
+                </div>
+
+                <!--Card 8-->
+                <div class="col-12 col-sm-4 my-3">
+
+                    <a href="https://piedrapapelotijeras.netlify.app" target="_blank">
+
+                        <!--Estructura card-->
+                        <div class="card border-0">
+
+                            <!--Imagen card-->
+                            <img src="assets/img/piedraPapelTijeras.png" class="card-img-top" alt="Img_piedraPapelTijeras">
+
+                            <!--Body card-->
+                            <div class="card-body">
+
+                                <!--Título card-->
+                                <h4 class="card-title">
+                                    Juego "Piedra, papel o tijeras"
+                                </h4>
+
+                                <!--Descripción card-->
+                                <p class="card-text fw-light">
+                                    Desafío latam n°8
+                                </p>
+
+                            </div>
+                        </div>
+
+                    </a>
+                </div>
+
             </div>
         </div>
 
@@ -431,7 +491,7 @@
                 <!--Título footer-->
                 <div class="col-12 col-sm-6">
                     <a href="index.html">
-                        <h1 fw-bold text-uppercase>
+                        <h1 class="fw-bold text-uppercase">
                             Sergio
                         </h1>
                     </a>
